index.css
/* ... */
  #about-me button {
    font-size: 30px;
    font-weight: bold;
    margin-left: 30px;
    padding: 10px 25px;
    color: rgb(255, 255, 255);
    background-color: rgb(0, 0, 0);
    border: none;
    border-radius: 10%;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
  }

  #about-me button:hover {
    background-color: rgb(255, 250, 250);
    color: black;
    -webkit-transition-duration: .4s;
    transition-duration: .4s;
  }

  #language-gallery {
    display: inline-block;
    width: 100%;
    height: 300px;
    background-image: linear-gradient(rgb(255, 77, 32), #e9a136);
    font-size: 24px;
    padding: 40px 0;
    color: #000;
  }

  #languages i {
    margin-top: 60px;
    margin-left: 800px;
    opacity: 0;
    animation: fader 3s infinite;
  }

  @keyframes fader {
    0% {margin-left: 1000px; opacity: 0;}
    10% {opacity: 0.01;}
    40% {margin-left: 20px; opacity: 1;}
    60% {margin-left: 20px; opacity: 1;}
    90% {opacity: 0.01;}
    100% {margin-left: -1000px; opacity: 0;}
  }
  
  hr {
    border: 2px solid black;
  }

  #home-pro{
    font-size: 25px;
    min-height: 35vh;
    padding-top: 10vh;
    padding-bottom: 5vh;
  }

  #project-back {
    margin: 50px 20px;
    border-radius: 1px;
    min-height: 130px;
    position: relative;
  }

  .project-pic {
    position: relative;
    padding: 10px 10px;
    margin: 30px 0px;
    display: inline-block;
  }

  .project-pic button {
    background-color: rgb(0, 0, 0);
    border: none;
    border-radius: 10%;
    color: white;
    padding: 10px 25px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    cursor: pointer;
  }

  .project-pic button:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
    transition-duration: .7s;
  }

  .project-pic button:active {
    background-color: #ff1e00;
    transition-duration: 2s;
    box-shadow: none;
    animation: shake 0.6s; 
    animation-iteration-count: infinite; 
    animation-delay: 0.6s;
  }

  @keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
  }

  button:focus {outline:0;}

  .project-pic img {
    height: 250px;
    border-radius: 5%;
    max-width: auto;
    padding-left: 5px;
    display: inline-block;
  }

  .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 245px;
    margin-left: 15px;
    margin-right: 10px;
    margin-top: 8px;
    border-radius: 5%;
    max-width: auto;
    opacity: 0;
    transition: .5s ease;
    background-image: linear-gradient(rgb(255, 66, 19), #e9a136);
    display: inline-block;
    border: 4px black solid;
  }

  .project-pic:hover .overlay{
    opacity: 1;
  }

  .text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
    width: 100%;
  }

  .text p {
    color: rgb(0, 0, 0);
    font-size: 20px;
  }

  #icon-fizz {
    color: black;
  }

  #home-pro h2{
    border-radius: 15px;
    min-height: 15px;
    padding: 5px 5px 5px 5px;
    background-color: rgb(255, 255, 255);
    color: black;
  }

  .project-pic h3 {
    margin-left: 40px;
    border-radius: 15px;
    min-height: 15px;
    padding: 5px 5px 5px 5px;
    background-color: rgba(255, 255, 255, 0.822);
    color: black;
    width: 80%;
  }
  
  #prolog {
    min-height: 50vh;
    padding-top: 25vh;
    background-image: linear-gradient(rgb(255, 77, 32), #e9a136);
    overflow: hidden;
  }

  #prolog h2{
     font-size: 50px;
     margin-bottom: 15px;
     padding-top: 20px;
     padding-bottom: 5px;
  }

  #prolog h3{
    font-size: 30px;
  }

  .fromTopIn {
    -webkit-transition: transform 1s ease, opacity 2s ease 2s;
    -moz-transition: transform 1s ease, opacity 2s ease 2s;
    -o-transition: transform 1s ease, opacity 2s ease 2s;
    -ms-transition: transform 1s ease, opacity 2s ease 2s;
    transition: transform 1s ease, opacity 2s ease 2s;
    -webkit-transform: translate(0, 0);
    -moz-transform: translate(0, 0);
    -o-transform: translate(0, 0);
    -ms-transform: translate(0, 0);
    transform: translate(0, 0);
    opacity: 1.0;
    
  }

  .fromTopOut { 
    -webkit-transition: transform 1s ease, opacity 2s ease;
    -moz-transition: transform 1s ease, opacity 2s ease;
    -o-transition: transform 1s ease, opacity 2s ease;
    -ms-transition: transform 1s ease, opacity 2s ease;
    transition: transform 1s ease, opacity 2s ease;
    -webkit-transform: translate(0, 55px);
    -moz-transform: translate(0, 55px);
    -o-transform: translate(0, 55px);
    -ms-transform: translate(0, 55px);
    transform: translate(0, 55px);
    opacity: 0.0;
  }
/* ... */

